# foot

./: .woodpecker.yml  CHANGELOG.md  README.md  config.c  config.h  csi.c  foot-features.h  foot.info  foot.ini  grid.c  ime.c  input.c  key-binding.h  main.c  meson.build  meson_options.txt  my-wcwidth.c  my-wcwidth.h  osc.c  render.c  terminal.c  terminal.h  url-mode.c  url-mode.h  vt.c
.builds/: alpine-x64.yml
doc/: foot-ctlseqs.7.scd  foot.1.scd  foot.ini.5.scd
scripts/: generate-wcwidth.py
tests/: meson.build  test-config.c  test-foot.c
